[gd_scene load_steps=2 format=3 uid="uid://dy71lmaltr0c2"]

[ext_resource type="Script" path="res://menus/overlay_menu.gd" id="1_f2xkk"]

[node name="overlay_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f2xkk")

[node name="button_list" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 256.0
offset_top = -74.0
offset_right = 384.0
offset_bottom = 74.0
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="play_button" type="Button" parent="button_list"]
layout_mode = 2
text = "Play"

[node name="resume_button" type="Button" parent="button_list"]
layout_mode = 2
text = "Resume"

[node name="restart_button" type="Button" parent="button_list"]
layout_mode = 2
text = "Restart"

[node name="quit_button" type="Button" parent="button_list"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="button_list/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="button_list/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="button_list/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="button_list/quit_button" to="." method="_on_quit_button_pressed"]
